# ChatGPT-Creations

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  cnn_digits.py  digits.py  fashion.py
assets/levels/: level1.csv  level2.csv  level3.csv
include/: Ability.hpp  Game.hpp  Item.hpp  Level.hpp  Player.hpp  Stats.hpp  debug.hpp
src/: CMakeLists.txt  Game.cpp  Level.cpp  Player.cpp  main.cpp
src/engine/: Application.cpp  Application.hpp  Assets.cpp  Assets.hpp  Camera.cpp  Camera.hpp  Config.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Math.hpp  Renderer.cpp  Renderer.hpp  Time.cpp  Time.hpp
src/game/: Components.hpp  Entity.hpp  LevelScene.cpp  LevelScene.hpp  Physics.cpp  Physics.hpp  Player.hpp  Scene.hpp  SceneStack.cpp  SceneStack.hpp  TileMap.cpp  TileMap.hpp  UI.cpp  UI.hpp
